Updated css layout to grid

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Crypto Market Simulator</title>
-    <script defer src="./js/script.js"></script>
-</head>
-<body>
-  <h1 id="title" class="main-title">Crypto Market Simulator</h1>
-  <img src="ADA.png">
-  <img src="BNB.png">  
-</body>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
+    <nav>
+        <div>HOME</div>
+        <div>ABOUT</div>
+        <div>WIDGETS</div>
+        <div>LOG OUT</div>
+    </nav>
+    <aside>SIDE BAR</aside>
+    <main>MAIN CONTENT</main>
+    <footer>FOOTER</footer>
+    <h1 id="title" class="main-title">Crypto Market Simulator</h1>
+    <img src="ADA.png">
+    <img src="BNB.png">
+  </body>
 </html>
