--- a/index.html
+++ b/index.html
@@ -9,16 +9,70 @@
   <body>
     <script src="script.js"></script>
     <nav>
-        <div>HOME</div>
-        <div>ABOUT</div>
-        <div>WIDGETS</div>
-        <div>LOG OUT</div>
+        <div>Crypto Market Simulator - Powered by</div>
+        <a href="https://daix.io" target="_blank">
+        <div class="DAIX">DAIX</div>
+        </a>
+        <div>How to play?</div>
     </nav>
-    <aside>SIDE BAR</aside>
-    <main>MAIN CONTENT</main>
-    <footer>FOOTER</footer>
-    <h1 id="title" class="main-title">Crypto Market Simulator</h1>
-    <img src="ADA.png">
-    <img src="BNB.png">
+    <main>
+    <h1 id="title" class="main-title">Satoshi vs Human</h1>
+      <ul id="currencies">
+          <li class="BTC">BTC</li>
+          <li class="ETH">ETH</li>
+          <li class="XRP">XRP</li>
+          <li class="BNB">BNB</li>
+          <li class="DOGE">DOGE</li>
+          <li class="DOT">DOT</li>
+          <li class="LINK">LINK</li>
+          <li class="UNI">UNI</li>
+          <li class="XLM">XLM</li>
+          <li class="ADA">ADA</li>
+     </ul>
+
+   </main>
+
+   <bt>
+     <button class="allset">ALL SET</button>
+     <button class="play">PLAY</button>
+   </bt>
+
+   <div class="form-group-human">
+       <label for="BTC">BTC:</label>
+       <input name="BTC" input type="number" min="0" max="100" id="BTC" />
+   </div>
+
+   <div class="form-group-human">
+       <label for="ETH">ETH:</label>
+       <input name="ETH" input type="number" min="0" max="100" id="ETH" />
+   </div>
+
+   <div class="form-group-satoshi">
+       <label for="BTC">BTC:</label>
+       <input name="BTC" input type="number" min="0" max="100" id="BTC" />
+   </div>
+
+   <div class="form-group-satoshi">
+       <label for="ETH">ETH:</label>
+       <input name="ETH" input type="number" min="0" max="100" id="ETH" />
+   </div>
+
+   <table style="width:25%">
+     <tr>
+       <th>Currency</th>
+       <th>1D Gain/Loss</th>
+       <th>7D Gain/Loss</th>
+     </tr>
+     <tr>
+       <td>BTC</td>
+       <td>2%</td>
+       <td>3%</td>
+     </tr>
+     <tr>
+       <td>ETH</td>
+       <td>5%</td>
+       <td>10%</td>
+     </tr>
+   </table>
   </body>
 </html>
