--- a/index.html
+++ b/index.html
@@ -37,42 +37,121 @@
      <button class="play">PLAY</button>
    </bt>
 
-   <div class="form-group-human">
-       <label for="BTC">BTC:</label>
-       <input name="BTC" input type="number" min="0" max="100" id="BTC" />
-   </div>
+   <button onclick="myFunction()">Try it</button>
+   <p id="demo"></p>
 
-   <div class="form-group-human">
-       <label for="ETH">ETH:</label>
-       <input name="ETH" input type="number" min="0" max="100" id="ETH" />
-   </div>
 
-   <div class="form-group-satoshi">
-       <label for="BTC">BTC:</label>
-       <input name="BTC" input type="number" min="0" max="100" id="BTC" />
-   </div>
+   <button onclick="H_VALUE()">Value</button>
+   <p id="demo2"></p>
 
-   <div class="form-group-satoshi">
-       <label for="ETH">ETH:</label>
-       <input name="ETH" input type="number" min="0" max="100" id="ETH" />
-   </div>
 
-   <table style="width:25%">
-     <tr>
-       <th>Currency</th>
-       <th>1D Gain/Loss</th>
-       <th>7D Gain/Loss</th>
-     </tr>
-     <tr>
-       <td>BTC</td>
-       <td>2%</td>
-       <td>3%</td>
-     </tr>
-     <tr>
-       <td>ETH</td>
-       <td>5%</td>
-       <td>10%</td>
-     </tr>
-   </table>
+<! Declaration of input boxes for human >
+ <div class="form-group-human">
+   <label for="HBTC">BTC:</label>
+   <input type="number" id="HBTC" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HETH">ETH:</label>
+   <input type="number" id="HETH" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HXRP">XRP:</label>
+   <input type="number" id="HXRP" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HBNB">BNB:</label>
+   <input type="number" id="HBNB" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HDOGE">DOGE:</label>
+   <input type="number" id="HDOGE" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HDOT">DOT:</label>
+   <input type="number" id="HDOT" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HLINK">LINK:</label>
+   <input type="number" id="HLINK" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HUNI">UNI:</label>
+   <input type="number" id="HUNI" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HXLM">XLM:</label>
+   <input type="number" id="HXLM" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-human">
+   <label for="HADA">ADA:</label>
+   <input type="number" id="HADA" value="0" min="0" max="100">
+ </div>
+
+<! End of declaration of input boxes for human >
+
+
+<! Declaration of input boxes for Satoshi >
+ <div class="form-group-satoshi">
+   <label for="SBTC">BTC:</label>
+   <input type="number" id="SBTC" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SETH">ETH:</label>
+   <input type="number" id="SETH" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SXRP">XRP:</label>
+   <input type="number" id="SXRP" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SBNB">BNB:</label>
+   <input type="number" id="SBNB" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SDOGE">DOGE:</label>
+   <input type="number" id="SDOGE" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SDOT">DOT:</label>
+   <input type="number" id="SDOT" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SLINK">LINK:</label>
+   <input type="number" id="SLINK" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SUNI">UNI:</label>
+   <input type="number" id="SUNI" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SXLM">XLM:</label>
+   <input type="number" id="SXLM" value="0" min="0" max="100">
+ </div>
+
+ <div class="form-group-satoshi">
+   <label for="SADA">ADA:</label>
+   <input type="number" id="SADA" value="0" min="0" max="100">
+ </div>
+
+<! End of declaration of input boxes for human >
+
+
   </body>
 </html>
