--- a/index.html
+++ b/index.html
@@ -33,19 +33,72 @@
    </main>
 
    <bt>
-     <button class="allset">ALL SET</button>
-     <button class="play">PLAY</button>
+     <button onclick="H_VALUE()">PLAY</button>
    </bt>
+   <p id="portfolio"></p>
 
-   <button onclick="myFunction()">Try it</button>
-   <p id="demo"></p>
+<formdec>
 
+  <! Declaration of input boxes for Satoshi >
+  <sathoshi>
 
-   <button onclick="H_VALUE()">Value</button>
-   <p id="demo2"></p>
+   <div class="form-group-satoshi">
+     <label for="SBTC">BTC:</label>
+     <input type="number" id="SBTC" value="0" min="0" max="100">
+   </div>
 
+   <div class="form-group-satoshi">
+     <label for="SETH">ETH:</label>
+     <input type="number" id="SETH" value="0" min="0" max="100">
+   </div>
 
+   <div class="form-group-satoshi">
+     <label for="SXRP">XRP:</label>
+     <input type="number" id="SXRP" value="0" min="0" max="100">
+   </div>
+
+   <div class="form-group-satoshi">
+     <label for="SBNB">BNB:</label>
+     <input type="number" id="SBNB" value="0" min="0" max="100">
+   </div>
+
+   <div class="form-group-satoshi">
+     <label for="SDOGE">DOGE:</label>
+     <input type="number" id="SDOGE" value="0" min="0" max="100">
+   </div>
+
+   <div class="form-group-satoshi">
+     <label for="SDOT">DOT:</label>
+     <input type="number" id="SDOT" value="0" min="0" max="100">
+   </div>
+
+   <div class="form-group-satoshi">
+     <label for="SLINK">LINK:</label>
+     <input type="number" id="SLINK" value="0" min="0" max="100">
+   </div>
+
+   <div class="form-group-satoshi">
+     <label for="SUNI">UNI:</label>
+     <input type="number" id="SUNI" value="0" min="0" max="100">
+   </div>
+
+   <div class="form-group-satoshi">
+     <label for="SXLM">XLM:</label>
+     <input type="number" id="SXLM" value="0" min="0" max="100">
+   </div>
+
+   <div class="form-group-satoshi">
+     <label for="SADA">ADA:</label>
+     <input type="number" id="SADA" value="0" min="0" max="100">
+   </div>
+
+  <! End of declaration of input boxes for Satoshi >
+
+  </sathoshi>
+
+<human>
 <! Declaration of input boxes for human >
+
  <div class="form-group-human">
    <label for="HBTC">BTC:</label>
    <input type="number" id="HBTC" value="0" min="0" max="100">
@@ -97,61 +150,9 @@
  </div>
 
 <! End of declaration of input boxes for human >
+</human>
 
-
-<! Declaration of input boxes for Satoshi >
- <div class="form-group-satoshi">
-   <label for="SBTC">BTC:</label>
-   <input type="number" id="SBTC" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SETH">ETH:</label>
-   <input type="number" id="SETH" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SXRP">XRP:</label>
-   <input type="number" id="SXRP" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SBNB">BNB:</label>
-   <input type="number" id="SBNB" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SDOGE">DOGE:</label>
-   <input type="number" id="SDOGE" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SDOT">DOT:</label>
-   <input type="number" id="SDOT" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SLINK">LINK:</label>
-   <input type="number" id="SLINK" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SUNI">UNI:</label>
-   <input type="number" id="SUNI" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SXLM">XLM:</label>
-   <input type="number" id="SXLM" value="0" min="0" max="100">
- </div>
-
- <div class="form-group-satoshi">
-   <label for="SADA">ADA:</label>
-   <input type="number" id="SADA" value="0" min="0" max="100">
- </div>
-
-<! End of declaration of input boxes for human >
-
+</formdec>
 
   </body>
 </html>
