More updates to simulator

--- a/index.html
+++ b/index.html
@@ -33,11 +33,43 @@
 
      <ul id="price">
        <li class="price">
-         <p id="BTCPR">$42,000</p>
+         <p id="BTCPR">$42000</p>
        </li>
 
        <li class="price">
-         <p id="ETHPR">$2,000</p>
+         <p id="ETHPR">$2000</p>
+       </li>
+
+       <li class="price">
+         <p id="XRPPR">$1.50</p>
+       </li>
+
+       <li class="price">
+         <p id="BNBPR">$350</p>
+       </li>
+
+       <li class="price">
+         <p id="DOGEPR">$0.50</p>
+       </li>
+
+       <li class="price">
+         <p id="DOTPR">$25</p>
+       </li>
+
+       <li class="price">
+         <p id="LINKPR">$30</p>
+       </li>
+
+       <li class="price">
+         <p id="UNIPR">$32</p>
+       </li>
+
+       <li class="price">
+         <p id="XLMPR">$0.50</p>
+       </li>
+
+       <li class="price">
+         <p id="ADAPR">$1.50</p>
        </li>
 
      </ul>
