--- a/index.html
+++ b/index.html
@@ -140,16 +140,18 @@
    </div>
 
    <div class="form-group-satoshi">
-     <h2>Initial Portfolio: $10,000</h2>
+     <h2>Initial Portfolio:</h2>
+     <h3>$10000</h3>
    </div>
 
    <div class="form-group-satoshi">
      <h2>Post-Trade Portfolio:</h2>
-     <p class="form-group-satoshi" id="sportfolio"></p>
+     <p class="form-post-trade" id="sportfolio"></p>
    </div>
 
    <div class="form-group-satoshi">
      <h2>Gain/Loss:</h2>
+     <p class="form-post-trade" id="sgl"></p>
    </div>
 
   <! End of declaration of input boxes for Satoshi >
@@ -215,16 +217,18 @@
  </div>
 
  <div class="form-group-human">
-   <h2>Initial Portfolio: $10,000</h2>
+   <h2>Initial Portfolio:</h2>
+   <h3>$10000</h3>
  </div>
 
  <div class="form-group-human">
    <h2>Post-Trade Portfolio:</h2>
-   <p class="form-group-human" id="hportfolio"></p>
+   <p class="form-post-trade" id="hportfolio"></p>
  </div>
 
  <div class="form-group-human">
    <h2>Gain/Loss:</h2>
+   <p class="form-post-trade" id="hgl"></p>   
  </div>
 
 
